Add payment reference validation and update configuration to use environment variables